--- a/StudyNotes/Audio Video/09_record_audio_sub_thread/mainwindow.ui
+++ b/StudyNotes/Audio Video/09_record_audio_sub_thread/mainwindow.ui
@@ -27,6 +27,19 @@
      <string>开始录音</string>
     </property>
    </widget>
+   <widget class="QCheckBox" name="checkBox">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>50</y>
+      <width>91</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>CheckBox</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
