--- a/StudyNotes/Audio Video/15_record_audio_wav/mainwindow.ui
+++ b/StudyNotes/Audio Video/15_record_audio_wav/mainwindow.ui
@@ -46,6 +46,11 @@
      </item>
      <item>
       <widget class="QLabel" name="timeLabel">
+       <property name="font">
+        <font>
+         <family>Courier New</family>
+        </font>
+       </property>
        <property name="text">
         <string>TextLabel</string>
        </property>
