--- a/StudyNotes/Audio Video/29_video_player/mainwindow.ui
+++ b/StudyNotes/Audio Video/29_video_player/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>832</width>
-    <height>637</height>
+    <width>810</width>
+    <height>658</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,13 +26,13 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="page">
-       <layout class="QHBoxLayout" name="horizontalLayout_6">
+      <widget class="QWidget" name="openFilePage">
+       <layout class="QHBoxLayout" name="horizontalLayout_5">
         <item>
          <widget class="QPushButton" name="openFileBtn">
           <property name="maximumSize">
            <size>
-            <width>80</width>
+            <width>70</width>
             <height>16777215</height>
            </size>
           </property>
@@ -43,7 +43,7 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="page_2">
+      <widget class="QWidget" name="videoPage">
        <layout class="QGridLayout" name="gridLayout">
         <item row="0" column="0">
          <widget class="VideoWidget" name="videoWidget" native="true"/>
@@ -53,14 +53,9 @@
      </widget>
     </item>
     <item>
-     <widget class="QWidget" name="widget" native="true">
-      <layout class="QHBoxLayout" name="horizontalLayout"/>
-     </widget>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
          <widget class="QPushButton" name="playBtn">
           <property name="enabled">
@@ -68,7 +63,7 @@
           </property>
           <property name="maximumSize">
            <size>
-            <width>50</width>
+            <width>40</width>
             <height>16777215</height>
            </size>
           </property>
@@ -84,7 +79,7 @@
           </property>
           <property name="maximumSize">
            <size>
-            <width>50</width>
+            <width>40</width>
             <height>16777215</height>
            </size>
           </property>
@@ -94,7 +89,7 @@
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_4">
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="VideoSlider" name="currentSlider">
             <property name="enabled">
@@ -113,8 +108,11 @@
           </item>
           <item>
            <widget class="QLabel" name="currentLabel">
-            <property name="enabled">
-             <bool>true</bool>
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
             </property>
             <property name="maximumSize">
              <size>
@@ -124,7 +122,7 @@
             </property>
             <property name="font">
              <font>
-              <family>Courier</family>
+              <family>Consolas</family>
              </font>
             </property>
             <property name="text">
@@ -139,7 +137,7 @@
            <widget class="QLabel" name="label_2">
             <property name="font">
              <font>
-              <family>Courier</family>
+              <family>Consolas</family>
              </font>
             </property>
             <property name="text">
@@ -152,9 +150,6 @@
           </item>
           <item>
            <widget class="QLabel" name="durationLabel">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
             <property name="maximumSize">
              <size>
               <width>70</width>
@@ -163,7 +158,7 @@
             </property>
             <property name="font">
              <font>
-              <family>Courier</family>
+              <family>Consolas</family>
              </font>
             </property>
             <property name="text">
@@ -174,83 +169,80 @@
             </property>
            </widget>
           </item>
+         </layout>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
           <item>
-           <layout class="QHBoxLayout" name="horizontalLayout_5">
-            <item>
-             <widget class="QPushButton" name="silenceBtn">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>50</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="text">
-               <string>静音</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="VideoSlider" name="volumnSlider">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>100</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>100</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="maximum">
-               <number>100</number>
-              </property>
-              <property name="value">
-               <number>100</number>
-              </property>
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="volumnLabel">
-              <property name="enabled">
-               <bool>true</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>30</width>
-                <height>0</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>30</width>
-                <height>16777215</height>
-               </size>
-              </property>
-              <property name="font">
-               <font>
-                <family>Courier</family>
-               </font>
-              </property>
-              <property name="text">
-               <string>100</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-              </property>
-             </widget>
-            </item>
-           </layout>
+           <widget class="QPushButton" name="silenceBtn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>40</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>静音</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="VideoSlider" name="volumnSlider">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="minimumSize">
+             <size>
+              <width>100</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="value">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QLabel" name="volumnLabel">
+            <property name="minimumSize">
+             <size>
+              <width>30</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>30</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="font">
+             <font>
+              <family>Consolas</family>
+             </font>
+            </property>
+            <property name="text">
+             <string>100</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
@@ -265,7 +257,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>832</width>
+     <width>810</width>
      <height>21</height>
     </rect>
    </property>
